feat(home/emacs): enable delete-selection-mode

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -385,6 +385,12 @@ Deal with various things that don't play nice with this setup.
       (apply fn args)))
 #+end_src
 
+** Delete Selection
+If a region is active, then override it if inserting text.
+#+begin_src elisp
+  (delete-selection-mode)
+#+end_src
+
 * Appearance
 ** Line Numbers
 #+begin_src elisp
