fix(home/emacs): add suffix for justl to disproject

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2286,13 +2286,22 @@ Common Lisp.
 
   (after! project
     (defun my/justl-project ()
-      "Wrapper around `justl' that uses
-   `project-current-directory-override'."
+      "Wrapper around `justl' that uses `project-current-directory-override'."
       (interactive)
       (let ((default-directory project-current-directory-override))
         (call-interactively #'justl)))
     (setf (alist-get 'my/justl-project project-switch-commands)
           '("Just" "j")))
+
+  (after! disproject
+    (defun my/justl-disproject ()
+      "Wrapper around `justl' that uses `disproject-with-environment'."
+      (interactive)
+      (disproject-with-environment
+        (call-interactively #'justl)))
+    (transient-append-suffix
+      #'disproject-dispatch "!"
+      '("j" "Just" my/justl-disproject)))
 #+end_src
 
 ** Gnuplot
