fix(home/emacs): org-refile-targets value

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1771,8 +1771,8 @@ Ah, the crown jewel of Emacs 👑.
                                       :foreground ,(doom-color 'red))
                                      ("WAIT"
                                       :foreground ,(doom-color 'yellow)))
-            org-refile-targets     '((nil . (:maxlevel . 2))
-                                     (org-agenda-files . (:maxlevel 2))))
+            org-refile-targets     '((nil :maxlevel . 2)
+                                     (org-agenda-files :maxlevel . 2)))
     (custom-set-faces
      `(org-headline-done ((t :inherit nil
                              :italic t
