feat(home/emacs): add pop mark commands to meow

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -698,6 +698,8 @@ Buffer management keys.
    '("W" . meow-back-symbol)
    '("x" . meow-pop-selection)
    '("y" . meow-save)
+   '("z" . meow-pop-to-global-mark)
+   '("Z" . meow-unpop-to-mark)
    '("'" . repeat)
    '(";" . meow-reverse)
    '("=" . meow-indent)
