feat(home/emacs): doom-tomorrow-night -> ef-owl

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -449,31 +449,17 @@ Reduce fringe size on the right (left is used for various indicators).
 
 ** Theme
 #+begin_src elisp
-  (require 'doom-themes)
-  (load-theme 'doom-tomorrow-night :no-confirm)
-  (doom-themes-org-config)
-#+end_src
+  (require 'ef-themes)
 
-Some extra tweaks:
-+ Scale outline headings (and Org titles) to be larger.
-+ Force certain faces to be fixed pitch (faces that are usually used in variable pitch prose buffers).
-#+begin_src elisp
-  (custom-set-faces
-   `(org-document-title        ((t :height 1.5)))
-   `(outline-1                 ((t :height 1.3)))
-   `(outline-2                 ((t :height 1.3)))
-   `(outline-3                 ((t :height 1.3)))
-   `(outline-4                 ((t :height 1.3)))
-   `(org-document-info-keyword ((t :inherit (shadow fixed-pitch))))
-   `(org-meta-line             ((t :inherit (shadow fixed-pitch))))
-   `(org-drawer                ((t :inherit (shadow fixed-pitch))))
-   `(org-special-keyword       ((t :inherit fixed-pitch)))
-   `(org-property-value        ((t :inherit shadow)))
-   `(org-indent                ((t :inherit (fixed-pitch org-hide))))
-   `(org-table                 ((t :inherit fixed-pitch)))
-   `(org-code                  ((t :inherit fixed-pitch)))
-   `(org-block                 ((t :inherit fixed-pitch)))
-   `(org-agenda-structure      ((t :height 1.3))))
+  (setopt ef-themes-mixed-fonts t
+          ef-themes-headings '((0 bold 1.5)
+                               (1 light variable-pitch 1.3)
+                               (2 light variable-pitch 1.3)
+                               (3 light variable-pitch 1.3)
+                               (4 light variable-pitch 1.3)
+                               (t light variable-pitch)))
+
+  (ef-themes-load-theme 'ef-owl)
 #+end_src
 
 ** Modeline
@@ -509,9 +495,10 @@ This is such an important addition to Emacs.
   (add-hook 'eldoc-mode-hook #'eldoc-box-hover-at-point-mode)
 
   (after! eldoc-box
-    (custom-set-faces
-     `(eldoc-box-border ((t :background ,(doom-color 'bg))))
-     '(eldoc-box-body ((t :inherit variable-pitch))))
+    (ef-themes-with-colors
+      (custom-set-faces
+       `(eldoc-box-border ((t :background ,bg-main)))
+       '(eldoc-box-body ((t :inherit variable-pitch)))))
     (setcdr (assq 'left-fringe eldoc-box-frame-parameters) 2)
     (setcdr (assq 'right-fringe eldoc-box-frame-parameters) 2))
 #+end_src
@@ -1222,10 +1209,11 @@ In addition to auto-loading via filename or magic values, we also want to load t
   (add-hook 'prog-mode-hook #'hl-todo-mode)
 
   (after! hl-todo
-    (setopt hl-todo-keyword-faces
-            `(("TODO" . ,(doom-color 'green))
-              ("FIXME" . ,(doom-color 'yellow))
-              ("HACK" . ,(doom-color 'blue)))))
+    (ef-themes-with-colors
+      (setopt hl-todo-keyword-faces
+              `(("TODO" . ,green)
+                ("FIXME" . ,yellow)
+                ("HACK" . ,cyan)))))
 #+end_src
 
 #+begin_src elisp
@@ -1763,10 +1751,11 @@ Ah, the crown jewel of Emacs 👑.
             org-cycle-separator-lines              0
             org-blank-before-new-entry             '((heading . t)
                                                      (plain-list-item . auto))
-            org-todo-keyword-faces `(("CANCELED"
-                                      :foreground ,(doom-color 'red))
-                                     ("WAIT"
-                                      :foreground ,(doom-color 'yellow)))
+            org-todo-keyword-faces (ef-themes-with-colors
+                                     `(("CANCELED"
+                                        :foreground ,red)
+                                       ("WAIT"
+                                        :foreground ,yellow)))
             org-refile-targets     '((nil :maxlevel . 2)
                                      (org-agenda-files :maxlevel . 2)))
     (custom-set-faces
@@ -1837,11 +1826,12 @@ Ah, the crown jewel of Emacs 👑.
             org-agenda-deadline-faces '((0.8 . org-imminent-deadline)
                                         (0.5 . org-upcoming-deadline)
                                         (0.0 . org-upcoming-distant-deadline)))
-    (custom-set-faces
-     `(org-scheduled-today           ((t (:foreground ,(doom-color 'orange) :weight bold))))
-     `(org-imminent-deadline         ((t (:foreground ,(doom-color 'red)    :weight semibold))))
-     `(org-upcoming-deadline         ((t (:foreground ,(doom-color 'yellow) :weight medium))))
-     `(org-upcoming-distant-deadline ((t (:foreground ,(doom-color 'yellow) :weight light))))))
+    (ef-themes-with-colors
+      (custom-set-faces
+       `(org-scheduled-today           ((t (:foreground ,magenta :weight bold))))
+       `(org-imminent-deadline         ((t (:foreground ,red    :weight semibold))))
+       `(org-upcoming-deadline         ((t (:foreground ,yellow :weight medium))))
+       `(org-upcoming-distant-deadline ((t (:foreground ,yellow :weight light)))))))
 #+end_src
 
 Iosevka by default lets some characters be two-wide, which messes up some alignment in Org Agenda, so we force the font to be perfectly monospace.
@@ -1971,19 +1961,21 @@ Make Org Mode pretty again!
                               (?* . "•"))
             org-modern-progress 8
      ;; For some reason, inheriting from `org-modern-todo' messes with the size
-            org-modern-todo-faces `(("CANCELED"
-                                     :inverse-video t
-                                     :weight semibold
-                                     :foreground ,(doom-color 'red))
-                                    ("WAIT"
-                                     :inverse-video t
-                                     :weight semibold
-                                     :foreground ,(doom-color 'yellow)))))
+            org-modern-todo-faces (ef-themes-with-colors
+                                    `(("CANCELED"
+                                       :inverse-video t
+                                       :weight semibold
+                                       :foreground ,red)
+                                      ("WAIT"
+                                       :inverse-video t
+                                       :weight semibold
+                                       :foreground ,yellow)))))
 
-  (custom-set-faces
-   `(org-modern-done ((t :inherit org-modern-todo
-                         :foreground ,(doom-color 'green)))) 
-   '(org-modern-symbol ((t (:family "Iosevka Fixed SS18")))))
+  (ef-themes-with-colors
+    (custom-set-faces
+     `(org-modern-done ((t :inherit org-modern-todo
+                           :foreground ,green))) 
+     '(org-modern-symbol ((t (:family "Iosevka Fixed SS18"))))))
 #+end_src
 
 ** Org Appear
