--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -452,12 +452,12 @@ Reduce fringe size on the right (left is used for various indicators).
   (require 'ef-themes)
 
   (setopt ef-themes-mixed-fonts t
-          ef-themes-headings '((0 bold 1.5)
-                               (1 light variable-pitch 1.3)
-                               (2 light variable-pitch 1.3)
-                               (3 light variable-pitch 1.3)
-                               (4 light variable-pitch 1.3)
-                               (t light variable-pitch)))
+          ef-themes-headings '((0 1.5)
+                               (1 variable-pitch light 1.3)
+                               (2 variable-pitch light 1.3)
+                               (3 variable-pitch light 1.3)
+                               (4 variable-pitch light 1.3)
+                               (t variable-pitch light)))
 
   (ef-themes-load-theme 'ef-owl)
 #+end_src
