feat(home/emacs): tweak meow binds

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -676,7 +676,7 @@ Buffer management keys.
    '("o" . meow-block)
    '("O" . meow-to-block)
    '("p" . meow-replace)
-   '("P" . meow-replace-pop)
+   '("P" . meow-yank-pop)
    '("q" . meow-quit)
    '("r" . meow-join)
    '("s" . meow-insert)
@@ -688,12 +688,14 @@ Buffer management keys.
    '("v" . meow-search)
    '("w" . meow-back-word)
    '("W" . meow-back-symbol)
-   '("x" . meow-pop-selection)
+   '("x" . meow-swap-grab)
+   '("X" . meow-pop-selection)
    '("y" . meow-save)
    '("z" . meow-pop-to-global-mark)
    '("Z" . meow-unpop-to-mark)
    '("'" . repeat)
    '(";" . meow-reverse)
+   '("-" . negative-argument)
    '("=" . meow-indent)
    '("," . meow-inner-of-thing)
    '("." . meow-bounds-of-thing)
@@ -704,7 +706,6 @@ Buffer management keys.
 
   (dolist (cmd '((meow-kill        . meow-delete)
                  (meow-replace     . meow-yank)
-                 (meow-replace-pop . meow-yank-pop)
                  (meow-reverse     . negative-argument)))
     (setf (alist-get (car cmd) meow-selection-command-fallback)
           (cdr cmd)))
