feat(home/emacs): tab-and-go + quick for corfu
Bit unsatisfied with my current completion setup, gonna experiment with this a
bit and see how I feel 🤔.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -908,11 +908,19 @@ Repeat map for candidate navigation.
 #+begin_src elisp
   (require 'corfu)
 
-  (bind-key "RET" nil 'corfu-map)
+  (bind-keys :map corfu-map
+             ("<tab>" . corfu-next)
+             ("<backtab>" . corfu-previous)
+             ("M-q" . corfu-quick-insert))
   (setopt tab-always-indent 'complete
+          corfu-min-width 20
           corfu-quit-no-match nil
-          corfu-quit-at-boundary nil
-          corfu-preview-current 'insert)
+          corfu-quit-at-boundary 'separator
+          corfu-preview-current 'insert
+          corfu-preselect 'prompt
+          corfu-popupinfo-delay '(1.25 . 0.5)
+          corfu-quick1 "arstneio"
+          corfu-quick2 corfu-quick1)
 
   (custom-set-faces
    '(corfu-default ((t (:inherit fixed-pitch)))))
@@ -920,14 +928,6 @@ Repeat map for candidate navigation.
   (global-corfu-mode)
   (corfu-popupinfo-mode)
   (corfu-history-mode)
-#+end_src
-
-Repeat maps to simplify candidate selection 🙂.
-#+begin_src elisp
-  (defvar-keymap my/corfu-repeat-map
-    :repeat t
-    "n" #'corfu-next
-    "p" #'corfu-previous)
 #+end_src
 
 =Cape= provides many various completion-at-point functions (=capfs=), which help extend =Corfu=, which itself extends Emacs' native completion-at-point functionality. All the functions have autoloads, but [[help:completion-at-point-functions][completion-at-point-functions]] is usually buffer-local, so we use a hook to add it 👍.
