feat(home/emacs): change vertico-quick bind to line up with corfu
Also, fix a typo. You can tell I never used that bind by how long that typo's
been there 💀.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -808,9 +808,9 @@ Integrates Avy with [[*Embark][Embark]] (taken from [[https://karthinks.com/soft
              ("RET" . vertico-directory-enter)
              ("DEL" . vertico-directory-delete-char)
              ("M-DEL" . vertico-directory-delete-word)
-             ("M-j" . vertico-quick-jump)
+             ("M-q" . vertico-quick-jump)
              ("M-P" . vertico-repeat-previous)
-             ("M-N" . vertico-repeat-nex))
+             ("M-N" . vertico-repeat-next))
 
   (setopt vertico-count 20
           vertico-cycle t
