feat(home/emacs): set corfu-cycle to t

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -903,6 +903,7 @@ Repeat map for candidate navigation.
           corfu-quit-at-boundary 'separator
           corfu-preview-current 'insert
           corfu-preselect 'prompt
+          corfu-cycle t
           corfu-popupinfo-delay '(1.25 . 0.5)
           corfu-quick1 "arstneio"
           corfu-quick2 corfu-quick1)
