fix(home/emacs): auto-enter meow insert mode on org capture

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1716,6 +1716,8 @@ Ah, the crown jewel of Emacs 👑.
   (add-hook 'org-mode-hook (lambda () (setq-local line-spacing 0.1)))
   (add-hook 'org-mode-hook #'org-autolist-mode)
 
+  (add-hook 'org-capture-mode-hook #'meow-insert)
+
   (after! org
     (setopt org-directory                          denote-directory
             org-hide-emphasis-markers              t
