--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1446,6 +1446,7 @@ The repository comes with many different files for "sources", that each have var
 [[help:next-error][next-error]] doesn't work on Flymake's errors, so we remap the command when Flymake is active.
 #+begin_src elisp
   (after! flymake
+    (setopt flymake-show-diagnostics-at-end-of-line 'short)
     (bind-keys :map flymake-mode-map
                ([remap next-error] . flymake-goto-next-error)
                ([remap previous-error] . flymake-goto-prev-error)))
