feat(home/emacs): doom-modeline, again

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -493,7 +493,19 @@ Reduce fringe size on the right (left is used for various indicators).
 
 ** Modeline
 #+begin_src elisp
+  (require 'doom-modeline)
+
+  (setopt doom-modeline-height 30
+          doom-modeline-icon t
+          doom-modeline-project-detection 'project
+          doom-modeline-buffer-file-name-style 'relative-from-project
+          doom-modeline-percent-position nil
+          doom-modeline-enable-word-count t
+          doom-modeline-minor-modes t
+          doom-modeline-buffer-encoding nil)
+
   (minions-mode)
+  (doom-modeline-mode)
 #+end_src
 
 ** Nyan Mode
