feat(home/emacs): enable nyan cat animation
🐱

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -516,9 +516,9 @@ Minions provides a clean minor mode menu implementation that allows customizing 
 This is such an important addition to Emacs.
 #+begin_src elisp
   (require 'nyan-mode)
-  (setopt nyan-bar-length 24
+  (setopt nyan-bar-length 20
           nyan-minimum-window-width 48
-          nyan-wavy-trail t)
+          nyan-animate-nyancat t)
   (nyan-mode)
 #+end_src
 
