feat(home/emacs): add initialism to default orderless styles

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -854,7 +854,10 @@ Repeat map for candidate navigation.
 #+begin_src elisp
   (require 'orderless)
   (setopt completion-styles '(orderless basic)
-          completion-category-overrides '((file (styles basic partial-completion))))
+          completion-category-overrides '((file (styles basic partial-completion)))
+          orderless-matching-styles '(orderless-literal
+                                      orderless-regexp
+                                      orderless-initialism))
 #+end_src
 
 ** Consult
