--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1758,6 +1758,7 @@ Ah, the crown jewel of Emacs 👑.
   (add-hook 'org-mode-hook #'org-autolist-mode)
 
   (add-hook 'org-capture-mode-hook #'meow-insert)
+  (add-hook 'org-tab-first-hook #'completion-at-point)
 
   (after! org
     (setopt org-directory                          denote-directory
